Identifier resolver: return URL and potential to throw an exception